# Art

./: .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  deny.toml  mkdocs.yml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  incident.yml
.github/workflows/: ci.yml  nightly-stage29-replay-determinism.yml  nightly_chaos.yml  platform_matrix_stage37.yml  release_stage04.yml  required_gates.yml  security_stage04.yml  stage14-soak-artifacts.yml
agent/: Cargo.toml
agent/src/: main.rs
apps/console-web/: package.json
browser/: package-lock.json  package.json
browser/scripts/: build.mjs  lint.mjs
browser/src/: index.js  level0_multitab.js  outbox.js  panel0.js  panel0_sw.js
browser/test/: level0.chaos.e2e.test.js  multitab.e2e.test.js  outbox.compression.test.js  panel0.e2e.test.js  panel0_i18n_laws.test.js  smoke.test.js
certs/: cert.pem  key.pem
config/: core.toml
core/: Cargo.toml
core/embedded/panel0/: bootstrap.html  index.html  panel0.css  panel0.js  panel0_sw.js
core/src/: bootstrap_runtime.rs  main.rs
docker/: agent.Dockerfile  core.Dockerfile
docs/: ARCHITECTURE.md  INTEGRATION.md  README.md
docs/agent/: receiver_source_coverage.md  receivers.md  receivers_chaos.md  receivers_config.md  receivers_state.md  recovery.md  spool.md  spool_chaos.md  spool_policies.md
docs/api/: errors.md  openapi.yaml  schema_compliance.md  schemas.md  snapshot.md  stream.md  versioning.md
docs/browser/: chaos_e2e_matrix.md  compression.md  cors_gap.md  dlq.md  level0_api.md  outbox_limits.md
docs/compliance/: airgapped.md  audit_trail.md  control_matrix.md  data_destruction.md  data_residency.md  (+4 more)
formats/: authenticity_assets_allowlist.yaml  connected_system_visibility_v0_2.yaml  defect_remediation_control_matrix_v0_2.yaml  documentation_tree_rules_v0_2.yaml  documentation_tree_v0_2.yaml  monolith_budget_guard_v0_2.yaml  platform_support.yaml  protective_safeguards_catalog_v0_2.yaml  regart_adversarial_harness_v0_2.yaml  root_decision_tree_dependencies.yaml  ru_regulatory_scope.yaml
grafana/: art_agent_overview.json  art_core_overview.json  art_ingest_pipeline.json
scripts/: export_audit_pack.sh  storage_stage11.py
systemd/: art-vacuum.service  art-vacuum.timer
(+644 files in other folders)
