[package]
name = "art-agent"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"
license-file = "../LICENSE"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
