[package]
name = "art-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.7", features = ["json"] }
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
