[package]
name = "art-core"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.7", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["compression-gzip"] }

[dev-dependencies]
flate2 = "1.1"
http-body-util = "0.1"
proptest = "1.5"
tower = "0.5"
